Allos also forward booking for the next seven days
closes #1

Signed-off-by: Tim Beermann <tibeer@outlook.de>

--- a/moco.yaml.example
+++ b/moco.yaml.example
@@ -1,5 +1,5 @@
 ---
-book_date: "2025-02-28"  # make sure this is a string!
+#book_date: "2025-02-28"  # make sure this is a string, this is option. If not set or empty, today will be used.
 activities:
   - Daily meeting
   - Sprint preplanning Meeting
